Wrap stings in gettex, fix UI and add actual strings in Move Stake modal

--- a/apps/block_scout_web/assets/css/components/stakes/_modal_stake.scss
+++ b/apps/block_scout_web/assets/css/components/stakes/_modal_stake.scss
@@ -13,8 +13,8 @@
 }
 
 .modal-stake-move {
-  max-width: 640px;
-  min-width: 640px;
+  max-width: 740px;
+  min-width: 740px;
   width: 100%;
 
   @include media-breakpoint-down(sm) {
